# multi_armed_bandits

./: pyproject.toml  streamlit.py
res/: figure_2.2.json  figure_2.3.json  figure_2.4.json  figure_2.5.json
src/: average_reward.py  main.py  optimal_action.py  parameter_study.py  streamlit.py
src/mab/: bandit.py  plots.py  simulator.py  testbed.py
src/mab/bandit/: nonstationary_bandit.py  stationary_bandit.py
src/mab/policy/: __init__.py  constant_alpha_epsilon_greedy_policy.py  egreedy_policy.py  epsilon_greedy_policy.py  gradient_policy.py  policy.py  random_policy.py  ucb_policy.py  upper_confidence_bound_policy.py
