[project]
name = "multi-armed-bandits"
version = "1.0.0"
description = "Pyton implementation of multi-armed bandit testbed from Sutton and Barto."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.3.0", "numpy>=2.3.3", "plotly>=4.0.0", "tqdm>=4.67.1"]

[dependency-groups]
dev = []
